<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:paddingBottom="20dp"
        android:text="@string/shuttle_finder"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#663399"
        android:textSize="30sp" />
    
    <Button
        android:id="@+id/Get_On"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/button"
        android:text="" />

    <TextView
        android:id="@+id/pickup_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_directions"
        android:layout_marginLeft="20dp"
        android:background="@android:color/transparent"
        android:textColor="#663399"/>

    <Button
        android:id="@+id/Get_Off"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/button"
        android:text="@string/get_off" />

    <TextView
        android:id="@+id/dropoff_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/Alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_me"
        android:layout_marginLeft="20dp"
        android:textColor="#663399"
        android:background="@android:color/transparent" />
    
    <Button
        android:id="@+id/Arrive_In"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/button"
        android:text="@string/time_to" />

    <TextView
        android:id="@+id/arrival_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Button
        android:id="@+id/back"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/button"
        android:text="@string/back" />
    
</LinearLayout>