<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      android:background="@drawable/background"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:paddingBottom="20dp"
        android:text="@string/shuttle_finder"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#663399"
        android:textSize="30sp" />
    
    <Button
        android:id="@+id/Get_On_Home"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/button"
        android:text="@string/closest_stop" />

    <TextView
        android:id="@+id/pickup_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <Button
        android:id="@+id/time_arrival_home"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/button"
        android:text="@string/time_to" />

    <TextView
        android:id="@+id/time_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Button
        android:id="@+id/change_address"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/button_small"
        android:text="@string/change_home" />

    <Button
        android:id="@+id/back"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/button_small"
        android:text="@string/back" />    
    

</LinearLayout>