<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:paddingBottom="20dp"
        android:text="@string/shuttle_finder"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#663399"
        android:textSize="30sp" />
    
    <Button
        android:id="@+id/Get_On_Basic"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/button"
        android:text="@string/closest_stop" />

    <TextView
        android:id="@+id/pickup_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <Button
        android:id="@+id/time_arrival_basic"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/button"
        android:text="@string/time_to" />

    <TextView
        android:id="@+id/time_basic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <Button
         android:id="@+id/back"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:layout_gravity="center"
         android:text="@string/back" />

    
    
</LinearLayout>